Fix Paper 26.2 build compatibility (Java 25, API 26.2.build.53-alpha)
- Centralize paperApiVersion and javaVersion in root build.gradle.kts
- Update all modules from invalid 26.2-R0.1-SNAPSHOT to 26.2.build.53-alpha
- Require Java 25 toolchain for Paper 26.2 API compatibility
- Fix Team plugin glow API (removed GLOW_COLOR option), GUI listener, tab complete
- Fix FakePlayer ProtocolLib packet API and Adventure/ProtocolLib wrapper usage
- Fix PlayerDisguise unit test for Adventure 5.x TranslationArgument API

Co-authored-by: Jalen Ho <JalenHo@users.noreply.github.com>